# ConduitV2

./: README.md  build.bat  build.py  build.sh  conduit_concept.txt  install.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml
conduit_sample_project/: .gitignore
conduit_sample_project/02-ressources/templates/: modelling.blend
resources/blender_app_template/: bl_app_template_info.xml
src/conduit/: __main__.py
src/conduit/git_layer/: lfs.py  repo.py
src/conduit/model/: blender_installer.py  ignore.py  nodes.py  openers.py  project.py  scanner.py  settings.py
src/conduit/tests/: test_git_layer.py  test_nodes.py  test_project_settings.py  test_scanner.py  test_settings.py
src/conduit/ui/: main_window.py  stylesheet.qss  theme_loader.py
src/conduit/ui/dialogs/: clone_dialog.py  commit_dialog.py  conflict_dialog.py  new_project_dialog.py  new_task_dialog.py  project_settings_dialog.py  settings_dialog.py
src/conduit/ui/items/: __init__.py  asset_item.py  file_item.py  folder_item.py  history_item.py  title_bar.py
src/conduit/ui/main_window_layout/: buttons_pane.py  details_pane.py  files_pane.py  folder_pane.py  tasks_pane.py
