[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conduit"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "GitPython>=3.1",
]

[project.scripts]
conduit = "conduit.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conduit"]

[tool.pytest.ini_options]
testpaths = ["src/conduit/tests"]
